syntax = "proto3";
package Proxy.Ethereum.Samples.HousePurchase;

option csharp_namespace = "Proxy.Ethereum.Samples.HousePurchase";
option java_package = "com.proxy.ethereum.samples.housepurchase";
option java_multiple_files = true;

message HousePurchaseCreateRequest {
    bytes owner_id = 1;
}

message RecordHousePurchaseRequest {
    bytes property_id = 1;
    bytes buyer_id = 2;
    uint32 date = 3;
    uint32 price = 4;
}

message RecordHousePurchaseResponse {
    uint32 return_value_1 = 1;
}

message HousePurchasedEventMessage {
    int32 purchase_id = 1;
    bytes property_id = 2;
    bytes buyer_id = 3;
    uint32 date = 4;
    uint32 price = 5;
}
